--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
-    <string name="signin">ورود</string>
+    <string name="login">ورود</string>
     <string name="username">نام کاربری</string>
     <string name="password">رمز عبور</string>
 
