--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
     <string name="app_name">Reyhoon</string>
 
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 
     <string name="login">ورود</string>
-    <string name="username">نام کاربری</string>
+    <string name="user_name">نام کاربری</string>
     <string name="password">رمز عبور</string>
+
+
+
+    <string name="domainURL_v2">/api/v1.2</string>
 
 </resources>
