--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
 
 
 
-    <string name="domainURL_v2">/api/v1.2</string>
+    <string name="domainURL_v2">http://192.168.1.243:5000/api/v1.2</string>
 
 </resources>
