add users fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="login">ورود</string>
     <string name="user_name">نام کاربری</string>
     <string name="password">رمز عبور</string>
+    <string name="users">کاربران</string>
 
 
 
