--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,6 @@
 <resources>
     <string name="app_name">Reyhoon</string>
 
-    <string name="action_settings">Settings</string>
-
     <string name="login">ورود</string>
     <string name="user_name">نام کاربری</string>
     <string name="password">رمز عبور</string>
@@ -10,5 +8,7 @@
     <string name="unauthorized">نام کاربری یا پسورد اشتباست</string>
     <string name="error_conection">خطا در برقراری ارتباط</string>
     <string name="server_error">خطا سرور</string>
+    <string name="close">Close</string>
+    <string name="open">Open</string>
 
 </resources>
