--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Reyhoon</string>
+    <string name="app_name">باجیرو</string>
 
     <string name="login">ورود</string>
     <string name="user_name">نام کاربری</string>
