--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="close">Close</string>
     <string name="open">Open</string>
 
+
+    <string-array name="drawer_title">
+        <item>فروش</item>
+        <item>گزارش</item>
+        <item>مشترکین</item>
+        <item>غذاها</item>
+        <item>پیک‌ها</item>
+        <item>کاربران</item>
+        <item>تنظیمات</item>
+    </string-array>
 </resources>
